--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-standard": "^1.2.0",
     "standard": "^5.1.0",
     "tape": "^4.0.0"
+  },
+  "frock": {
+    "compatible-versions": "0.1.0 - 0.9.*"
   }
 }
