--- a/package.json
+++ b/package.json
@@ -1,31 +1,48 @@
 {
   "name": "frock-proxy",
   "version": "0.1.0",
-  "description": "A proxy server for frock",
+  "description": "A proxy plugin for frock",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run lint && npm run compile && babel test/index.js | tape",
-    "prepublish": "npm run compile",
-    "compile": "babel src --out-dir lib",
-    "lint": "standard src/**/*.js test/**/*.js"
+    "prepublish": "npm test",
+    "lint": "standard src/**/*.js tests/**/*.js",
+    "build": "rimraf lib && babel src --out-dir lib",
+    "start": "npm run build -- --watch",
+    "test": "npm run build && babel-node tests/index.js &&  npm run lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/urbanairship/frock-proxy.git"
   },
   "author": "Urban Airship",
+  "contributors": [
+    "Nathan Wittstock <nate.wittstock@urbanairship.com>"
+  ],
   "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/urbanairship/frock-proxy/issues"
+  },
+  "homepage": "https://github.com/urbanairship/frock-proxy#readme",
   "dependencies": {
-    "core-js": "^1.1.4",
-    "xtend": "^4.0.0"
+    "babel-polyfill": "^6.0.16"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "eslint": "^1.1.0",
-    "eslint-config-standard": "^4.1.0",
-    "eslint-config-standard-react": "^1.0.4",
-    "eslint-plugin-react": "^3.2.2",
-    "eslint-plugin-standard": "^1.2.0",
+    "babel-cli": "^6.0.15",
+    "babel-preset-es2015": "^6.0.15",
+    "commuter": "^2.0.0",
+    "node-mocks-http": "^1.5.1",
+    "proxyquire": "^1.7.3",
+    "rimraf": "^2.4.3",
     "standard": "^5.1.0",
-    "tape": "^4.0.0"
+    "tape": "^4.0.0",
+    "through": "^2.3.8"
   },
   "frock": {
     "compatible-versions": "0.1.0 - 0.9.*"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
