--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "babel-cli": "^6.0.15",
     "babel-preset-es2015": "^6.0.15",
     "commuter": "^2.0.0",
-    "node-mocks-http": "^1.5.1",
+    "portfinder": "^0.4.0",
     "proxyquire": "^1.7.3",
     "rimraf": "^2.4.3",
+    "server-destroy": "^1.0.1",
     "standard": "^5.1.0",
     "tape": "^4.0.0",
     "through": "^2.3.8"
