--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "npm test",
-    "lint": "standard src/**/*.js tests/**/*.js",
-    "build": "rimraf lib && babel src --out-dir lib",
-    "start": "npm run build -- --watch",
-    "test": "npm run build && babel-node tests/index.js &&  npm run lint"
+    "lint": "standard lib/*.js tests/*.js",
+    "test": "tape tests/*.js && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -23,12 +21,8 @@
     "url": "https://github.com/urbanairship/frock-proxy/issues"
   },
   "homepage": "https://github.com/urbanairship/frock-proxy#readme",
-  "dependencies": {
-    "babel-polyfill": "^6.3.14"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
     "commuter": "^2.0.0",
     "portfinder": "^0.4.0",
     "proxyquire": "^1.7.3",
@@ -39,11 +33,6 @@
     "through": "^2.3.8"
   },
   "frock": {
-    "compatible-versions": "^2.0.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "compatible-versions": "^4.0.0"
   }
 }
