--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "A proxy plugin for frock",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "npm test",
-    "lint": "standard src/**/*.js tests/**/*.js",
-    "build": "rimraf lib && babel src --out-dir lib",
-    "start": "npm run build -- --watch",
-    "test": "npm run build && babel-node tests/index.js &&  npm run lint"
+    "lint": "standard lib/*.js tests/*.js",
+    "test": "tape tests/*.js && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -23,27 +20,18 @@
     "url": "https://github.com/urbanairship/frock-proxy/issues"
   },
   "homepage": "https://github.com/urbanairship/frock-proxy#readme",
-  "dependencies": {
-    "babel-polyfill": "^6.3.14"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
     "commuter": "^2.0.0",
     "portfinder": "^0.4.0",
     "proxyquire": "^1.7.3",
     "rimraf": "^2.4.3",
     "server-destroy": "^1.0.1",
-    "standard": "^5.1.0",
+    "standard": "^11.0.1",
     "tape": "^4.0.0",
     "through": "^2.3.8"
   },
   "frock": {
-    "compatible-versions": "^2.0.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "compatible-versions": "^4.0.0"
   }
 }
